--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,25 +1,29 @@
 {
-  "manifest_version": 2,
+    "manifest_version": 2,
 
-  "name": "Kotori Proxy Helper",
-  "description": "This extension helps you to use Kotori Proxy easier.",
-  "version": "1.0",
+    "name": "Kotori Proxy Helper",
+    "description": "This extension helps you to use Kotori Proxy easier.",
+    "version": "1.0",
 
-  "browser_action": {
-    "default_icon": {
-         "19": "icon-19.png",
-         "48": "icon-48.png"
-      },
-    "default_popup": "popup.html"
-  },
-  "icons": {
-      "19": "icon-19.png",
-      "48": "icon-48.png"
-   },
-   "permissions": [
-        "tabs", 
-        "http://*/*", 
-        "https://*/*", 
-        "notifications"
-      ]
+    "browser_action": {
+        "default_icon": {
+            "19": "icon-19.png",
+            "48": "icon-48.png"
+        },
+        "default_popup": "popup.html"
+    },
+    "icons": {
+        "19": "icon-19.png",
+        "48": "icon-48.png"
+    },
+    "permissions": [
+        "tabs",
+        "http://*/*",
+        "https://*/*",
+        "notifications",
+        "contextMenus"
+    ],
+    "background": {
+        "scripts": ["contentscript.js"]
+    }
 }
