--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,15 +3,14 @@
 
     "name": "__MSG_appName__",
     "description": "__MSG_description__",
-    "version": "1.1",
-    "default_locale": "en",
+    "version": "1.2",
+    "default_locale": "zh_CN",
 
     "browser_action": {
         "default_icon": {
             "19": "imgs/icon-19.png",
             "38": "imgs/icon-38.png"
-        },
-        "default_popup": "popup.html"
+        }
     },
     "icons": {
         "256": "imgs/icon-256.png",
